--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "mongoose": "^5.12.14",
+        "mongoose-slug-generator": "^1.0.4",
         "node-sass": "^6.0.0"
     },
     "devDependencies": {
