--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
+        "method-override": "^3.0.0",
         "mongoose": "^5.12.14",
         "mongoose-slug-generator": "^1.0.4",
         "node-sass": "^6.0.0"
